// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  font-size: calc((13 / 13) * var(--wp-g2-font-size));
  font-weight: var(--wp-g2-font-weight);
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--wp-g2-link-color);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0:hover {
  color: var(--wp-g2-link-color-hover);
}

<a
  class="components-truncate wp-components-truncate components-text wp-components-text ic-7u3orf ic-1m45iq3 components-link wp-components-link ic-euc9in ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Link"
  href="#"
>
  Let it go
</a>
`;

exports[`props should render isPlain 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  font-size: calc((13 / 13) * var(--wp-g2-font-size));
  font-weight: var(--wp-g2-font-weight);
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<a
  class="components-truncate wp-components-truncate components-text wp-components-text ic-7u3orf ic-1m45iq3 components-link wp-components-link ic-euc9in ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Link"
  href="#"
>
  Let it go
</a>
`;
